--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,40 @@
 @import "reset";
 //sass --watch D:\workspace\웹프로그래밍\0925_Create-DOM\scss\style.scss:D:\workspace\웹프로그래밍\0925_Create-DOM\css\style.css
+
+section {
+  width: 100%;
+  display: flex;
+
+  article {
+    width: 300px;
+    height: 150px;
+    padding: 30px;
+    background-color: #555;
+    color: #fff;
+    margin: 50px;
+  }
+}
+
+.modal {
+  width: 600px;
+  height: 300px;
+  background-color: hotpink;
+  border-radius: 10px;
+  box-shadow: 10px 10px 20px rgba(255, 105, 180, 0.5);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -300px;
+
+  button {
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    color: #fff;
+    font-size: 1rem;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+  }
+}
