--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ section {
   height: 300px;
   background-color: hotpink;
   border-radius: 10px;
-  box-shadow: 10px 10px 20px rgba(255, 105, 180, 0.5);
+  // box-shadow: 10px 10px 20px rgba(255, 105, 180, 0.5);
   position: fixed;
   top: 50%;
   left: 50%;
